--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "lint-staged": "^11.0.0",
     "vue": "^3.0.0",
     "vue-echarts": "^6.0.0-rc.6",
     "vue-router": "^4.0.0-0",
@@ -37,5 +38,14 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
