--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@google/maps": "^1.1.3",
+    "constants": "0.0.2",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "google-maps": "^4.3.3",
+    "google-maps-api-loader": "^1.1.1",
     "lint-staged": "^11.0.0",
     "vue": "^3.0.0",
     "vue-echarts": "^6.0.0-rc.6",
