--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "lint-staged": "^11.0.0",
