--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.17",
     "axios": "^0.21.1",
     "echarts": "^5.1.2",
+    "geolib": "^3.3.1",
     "lint-staged": "^11.0.0",
     "vue": "^3.0.0",
     "vue-echarts": "^6.0.0-rc.6",
