--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@here/maps-api-for-javascript": "^1.26.0",
     "@vuelidate/core": "^2.0.0-alpha.19",
     "@vuelidate/validators": "^2.0.0-alpha.17",
     "axios": "^0.21.1",
+    "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "geolib": "^3.3.1",
     "lint-staged": "^11.0.0",
