--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "firebase": "^8.7.0",
+    "firebaseui": "^4.8.0",
     "geolib": "^3.3.1",
     "lint-staged": "^11.0.0",
     "vue": "^3.0.0",
